fix: Use CSS classNames instead of inline styles for dark blue
REAL FIX - Inline styles weren't working:

Problem:
- modifiersStyles not applying
- Still showing light blue
- Inline styles being overridden

Solution - CSS classNames:
1. Added modifiersClassNames with custom class
2. Added .rdp-day_selected_custom to CSS
3. Uses SAME dark blue as DateRangeField: rgb(37 99 235)

Component:
- modifiersClassNames={{ selected: 'rdp-day_selected_custom' }}
- className='date-picker-single'

CSS:
- .rdp-day_selected_custom button { background-color: rgb(37 99 235) }
- Same selector as range circles

Result: Dark blue-600 filled circles matching DateRangeField

Build: GREEN (ESM 341KB, CJS 369KB)

--- a/packages/wizard-react/demo/src/index.css
+++ b/packages/wizard-react/demo/src/index.css
@@ -243,7 +243,9 @@ div.rdp-day_selected {
 .rdp .rdp-month .rdp-day_selected button,
 .rdp-months .rdp-month .rdp-day_selected button,
 div.rdp-day_selected button,
-.rdp-day_selected button.rdp-button_reset {
+.rdp-day_selected button.rdp-button_reset,
+.date-picker-single .rdp-day_selected_custom button,
+.rdp-day_selected_custom button {
   background-color: rgb(37 99 235) !important;
   color: white !important;
   border-radius: 50% !important;
