--- a/packages/wizard-react/demo/src/index.css
+++ b/packages/wizard-react/demo/src/index.css
@@ -252,4 +252,5 @@ div.rdp-day_selected button,
   border: none !important;
   width: 40px !important;
   height: 40px !important;
+  font-weight: 600 !important;
 }
