--- a/packages/wizard-react/demo/src/index.css
+++ b/packages/wizard-react/demo/src/index.css
@@ -122,6 +122,7 @@ button[aria-pressed="true"],
   color: #fff !important;
   font-weight: 700 !important;
   border: none !important;
+  border-radius: 50% !important;
 }
 
 .custom-selected-date:hover,
